navbar and carousel completed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="nav-item nav-link" href="#shoe">Courses</a>
             <a class="nav-item nav-link" href="#backpack">Other</a>
             <a class="nav-item nav-link" href="#backpack">Blog</a>
-            <a class="nav-item nav-link btn-green" href="#" tabindex="-1" aria-disabled="true">Sign in</a>
+            <a class="nav-item nav-link btn-green text-white" href="#" tabindex="-1" aria-disabled="true">Sign in</a>
           </div>
         </div>
       </nav>
