--- a/index.html
+++ b/index.html
@@ -61,6 +61,48 @@
   </div>
 
 
+  <div class="container">
+    <div class="row row-cols-1 row-cols-md-4">
+      <div class="col mb-3 d-flex align-items-center justify-content-center">
+        <div class="card h-100 ">
+          <img src="./images/ICON/book.png" class="card-img-top img-fluid" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title">1500+ Topics</h5>
+            <p class="card-text">Lean anything</p>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-3 d-flex align-items-center justify-content-center">
+        <div class="card h-100 ">
+          <img src="./images/ICON/Student.png" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title">1800+ Students</h5>
+            <p class="card-text">Learn anything</p>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-3 d-flex align-items-center justify-content-center">
+        <div class="card h-100">
+          <img src="./images/ICON/Test.png" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title">9K+ Test Token</h5>
+            <p class="card-text">Learn anything</p>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-3 d-flex align-items-center justify-content-center">
+        <div class="card h-100">
+          <img src="./images/ICON/Students.png" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title">2000+ Students</h5>
+            <p class="card-text">Learn anything</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/popper.min.js"></script>
