course card and testimonial section completed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="row">
               <div class="col-md-5">
                 <p>Are you ready to learn?</p>
-                <h1 class="poppin-lang">Learn with fun on <span class="text-green">any schedule</span></h1>
+                <h1 class="larger-font">Learn with fun on <span class="text-green">any schedule</span></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam maiores rem, ut dolores, hic adipisci.</p>
                 <a class="btn-green" href="#">Get started</a>
               </div>
@@ -60,12 +60,14 @@
     </div>
   </div>
 
+  <div class="gap-between"></div>
+
 
   <div class="container">
     <div class="row row-cols-1 row-cols-md-4">
       <div class="col mb-3 d-flex align-items-center justify-content-center">
-        <div class="card h-100 ">
-          <img src="./images/ICON/book.png" class="card-img-top img-fluid" alt="...">
+        <div class="card h-100 card-banner">
+          <img src="./images/ICON/book.png" class="card-img-top card-img-custom" alt="...">
           <div class="card-body text-center">
             <h5 class="card-title">1500+ Topics</h5>
             <p class="card-text">Lean anything</p>
@@ -73,8 +75,8 @@
         </div>
       </div>
       <div class="col mb-3 d-flex align-items-center justify-content-center">
-        <div class="card h-100 ">
-          <img src="./images/ICON/Student.png" class="card-img-top" alt="...">
+        <div class="card h-100 card-banner">
+          <img src="./images/ICON/Student.png" class="card-img-top card-img-custom" alt="...">
           <div class="card-body text-center">
             <h5 class="card-title">1800+ Students</h5>
             <p class="card-text">Learn anything</p>
@@ -82,8 +84,8 @@
         </div>
       </div>
       <div class="col mb-3 d-flex align-items-center justify-content-center">
-        <div class="card h-100">
-          <img src="./images/ICON/Test.png" class="card-img-top" alt="...">
+        <div class="card h-100 card-banner">
+          <img src="./images/ICON/Test.png" class="card-img-top card-img-custom" alt="...">
           <div class="card-body text-center">
             <h5 class="card-title">9K+ Test Token</h5>
             <p class="card-text">Learn anything</p>
@@ -91,8 +93,8 @@
         </div>
       </div>
       <div class="col mb-3 d-flex align-items-center justify-content-center">
-        <div class="card h-100">
-          <img src="./images/ICON/Students.png" class="card-img-top" alt="...">
+        <div class="card h-100 card-banner">
+          <img src="./images/ICON/Students.png" class="card-img-top card-img-custom" alt="...">
           <div class="card-body text-center">
             <h5 class="card-title">2000+ Students</h5>
             <p class="card-text">Learn anything</p>
@@ -102,6 +104,106 @@
     </div>
   </div>
 
+  <div class="gap-between"></div>
+  <div class="gap-between"></div>
+  <div class="container">
+    <h1 class="poppin-lang text-center">Online Courses</h1>
+    <div class="pb-4"></div>
+    <div class="row row-cols-1 row-cols-md-3">
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="./images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Modern Pyschology</h5>
+            <p class="card-text">Designation.</p>
+            <a href="#" class="btn-green">Buy Course</a>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">
+              <div class="d-flex justify-content-between">
+                <div>
+                  <img src="./images/ICON/calendar.png" alt="">
+                  <span class="align-items-center justify-content-center">Start 20 April, 2021</span>
+                </div>
+                <div>
+                  <img src="./images/ICON/people.png" alt="">
+                  <span>60 Seats</span>
+                </div>
+              </div>
+            </small>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="./images/Photos/Morder psyc.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Modern Pyschology</h5>
+            <p class="card-text">Designation.</p>
+            <a href="#" class="btn-green">Buy Course</a>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">
+              <div class="d-flex justify-content-between">
+                <div>
+                  <img src="./images/ICON/calendar.png" alt="">
+                  <span class="align-items-center justify-content-center">Start 20 April, 2021</span>
+                </div>
+                <div>
+                  <img src="./images/ICON/people.png" alt="">
+                  <span>60 Seats</span>
+                </div>
+              </div>
+            </small>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="./images/Photos/Morder pychons.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Modern Pyschology</h5>
+            <p class="card-text">Designation.</p>
+            <a href="#" class="btn-green">Buy Course</a>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">
+              <div class="d-flex justify-content-between">
+                <div>
+                  <img src="./images/ICON/calendar.png" alt="">
+                  <span class="align-items-center justify-content-center">Start 20 April, 2021</span>
+                </div>
+                <div>
+                  <img src="./images/ICON/people.png" alt="">
+                  <span>60 Seats</span>
+                </div>
+              </div>
+            </small>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<div class="gap-between"></div>
+
+<div class="container">
+  <h1 class="text-center pb-4">Testimonial</h1>
+  <div class="d-flex justify-content-center">
+    <div class="mb-3" style="width: 50%;">
+      <div class="row no-gutters d-flex justify-content-center align-items-center">
+        <div class="col-md-2">
+          <img src="./images/Photos/Man.png" class="img-fluid" alt="...">
+        </div>
+        <div class="col-md-10">
+          <div class="p-4">
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
   <script src="js/jquery-3.5.1.min.js"></script>
