--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
   <div class="gap-between"></div>
   <div class="gap-between"></div>
   <div class="container">
-    <h1 class="poppin-lang text-center">Online Courses</h1>
+    <h2 class="poppin-lang text-center">Online Courses</h2>
     <div class="pb-4"></div>
     <div class="row row-cols-1 row-cols-md-3">
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="./images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
+          <img src="./images/Photos/Morder pyschology.png" class="card-img-top p-3" alt="...">
           <div class="card-body">
             <h5 class="card-title">Modern Pyschology</h5>
             <p class="card-text">Designation.</p>
@@ -136,7 +136,7 @@
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="./images/Photos/Morder psyc.png" class="card-img-top" alt="...">
+          <img src="./images/Photos/Morder psyc.png" class="card-img-top p-3" alt="...">
           <div class="card-body">
             <h5 class="card-title">Modern Pyschology</h5>
             <p class="card-text">Designation.</p>
@@ -160,7 +160,88 @@
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="./images/Photos/Morder pychons.png" class="card-img-top" alt="...">
+          <img src="./images/Photos/Morder pychons.png" class="card-img-top p-3" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Modern Pyschology</h5>
+            <p class="card-text">Designation.</p>
+            <a href="#" class="btn-green">Buy Course</a>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">
+              <div class="d-flex justify-content-between">
+                <div>
+                  <img src="./images/ICON/calendar.png" alt="">
+                  <span class="align-items-center justify-content-center">Start 20 April, 2021</span>
+                </div>
+                <div>
+                  <img src="./images/ICON/people.png" alt="">
+                  <span>60 Seats</span>
+                </div>
+              </div>
+            </small>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="gap-between"></div>
+  <div class="gap-between"></div>
+  <div class="container">
+    <h2 class="poppin-lang text-center">Most Popular Courses</h2>
+    <div class="pb-4"></div>
+    <div class="row row-cols-1 row-cols-md-3">
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="./images/Photos/Morder pyschology.png" class="card-img-top p-3" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Modern Pyschology</h5>
+            <p class="card-text">Designation.</p>
+            <a href="#" class="btn-green">Buy Course</a>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">
+              <div class="d-flex justify-content-between">
+                <div>
+                  <img src="./images/ICON/calendar.png" alt="">
+                  <span class="align-items-center justify-content-center">Start 20 April, 2021</span>
+                </div>
+                <div>
+                  <img src="./images/ICON/people.png" alt="">
+                  <span>60 Seats</span>
+                </div>
+              </div>
+            </small>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="./images/Photos/Morder psyc.png" class="card-img-top p-3" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Modern Pyschology</h5>
+            <p class="card-text">Designation.</p>
+            <a href="#" class="btn-green">Buy Course</a>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">
+              <div class="d-flex justify-content-between">
+                <div>
+                  <img src="./images/ICON/calendar.png" alt="">
+                  <span class="align-items-center justify-content-center">Start 20 April, 2021</span>
+                </div>
+                <div>
+                  <img src="./images/ICON/people.png" alt="">
+                  <span>60 Seats</span>
+                </div>
+              </div>
+            </small>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="./images/Photos/Morder pychons.png" class="card-img-top p-3" alt="...">
           <div class="card-body">
             <h5 class="card-title">Modern Pyschology</h5>
             <p class="card-text">Designation.</p>
@@ -204,6 +285,56 @@
     </div>
   </div>
 </div>
+<div class="gap-between"></div>
+
+<footer>
+  <div class="container pt-5">
+    <div class="row">
+      <div class="col-md-5">
+        <p>Millions of people of all ages and from around the world are improving their lives with us</p>
+      </div>
+      <div class="col-md-7">
+        <div class="row">
+
+          <div class="col-md-4">
+            <h5>Course</h5>
+            <nav class="d-flex flex-column">
+              <a class="text-decoration-none text-white" href="#">Graphic Design</a>
+              <a class="text-decoration-none text-white" href="#">Web Design</a>
+              <a class="text-decoration-none text-white" href="#">Business</a>
+              <a class="text-decoration-none text-white" href="#">Marketing</a>
+              <a class="text-decoration-none text-white" href="#">Engineering</a>
+            </nav>
+          </div>
+          <div class="col-md-4">
+            <h5>Terms</h5>
+            <nav class="d-flex flex-column">
+              <a class="text-decoration-none text-white" href="#">Graphic Design</a>
+              <a class="text-decoration-none text-white" href="#">Web Design</a>
+              <a class="text-decoration-none text-white" href="#">Business</a>
+              <a class="text-decoration-none text-white" href="#">Marketing</a>
+              <a class="text-decoration-none text-white" href="#">Engineering</a>
+            </nav>
+          </div>
+          <div class="col-md-4">
+            <h5>Useful links</h5>
+            <nav class="d-flex flex-column">
+              <a class="text-decoration-none text-white" href="#">Graphic Design</a>
+              <a class="text-decoration-none text-white" href="#">Web Design</a>
+              <a class="text-decoration-none text-white" href="#">Business</a>
+              <a class="text-decoration-none text-white" href="#">Marketing</a>
+              <a class="text-decoration-none text-white" href="#">Engineering</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="text-center pt-5 pb-2">
+      <small>Copyright &copy 2020. Rokomari.com </small>
+    </div>
+
+  </div>
+</footer>
 
 
   <script src="js/jquery-3.5.1.min.js"></script>
