--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@
   </div>
 
   <div class="gap-between"></div>
-
-
   <div class="container">
-    <div class="row row-cols-1 row-cols-md-4">
+    <div class="row row-cols-1 row-cols-md-4 row-cols-sm-2">
       <div class="col mb-3 d-flex align-items-center justify-content-center">
         <div class="card h-100 card-banner">
           <img src="./images/ICON/book.png" class="card-img-top card-img-custom" alt="...">
@@ -188,7 +186,7 @@
   <div class="gap-between"></div>
   <div class="gap-between"></div>
   <div class="container">
-    <h2 class="poppin-lang text-center">Most Popular Courses</h2>
+    <h2 class="text-center">Most Popular Courses</h2>
     <div class="pb-4"></div>
     <div class="row row-cols-1 row-cols-md-3">
       <div class="col mb-4">
