--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="nav-item nav-link" href="#shoe">Courses</a>
             <a class="nav-item nav-link" href="#backpack">Other</a>
             <a class="nav-item nav-link" href="#backpack">Blog</a>
-            <a class="nav-item nav-link btn-green text-white" href="#" tabindex="-1" aria-disabled="true">Sign in</a>
+            <a class="nav-item nav-link btn-green text-white" href="#">Sign in</a>
           </div>
         </div>
       </nav>
@@ -37,7 +37,7 @@
           <div class="carousel-item active">
             <div class="row">
               <div class="col-md-5">
-                <p>Are you ready to learn?</p>
+                <p style="color: #FD511A;">Are you ready to learn?</p>
                 <h1 class="larger-font">Learn with fun on <span class="text-green">any schedule</span></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam maiores rem, ut dolores, hic adipisci.</p>
                 <a class="btn-green" href="#">Get started</a>
